initial material changes

--- a/app/TemplateForm/templateForm.html
+++ b/app/TemplateForm/templateForm.html
@@ -13,4 +13,8 @@
         <textarea ngControl="comment" cols="30" rows="10" id="comment" class="form-control"></textarea>
     </div>
     <button class="btn btn-primary" type="submit" [disabled]="!myForm.valid">Submit</button>
+    <!--<button md-raised-button color="primary" type="submit" [disabled]="!myForm.valid">Material Submit</button>-->
+    <md-checkbox [checked]="'true'">
+Material Checkbox
+  </md-checkbox>
 </form>
