--- a/index.html
+++ b/index.html
@@ -1,33 +1,40 @@
 <html>
-  <head>
+
+<head>
     <title>Angular 2 QuickStart</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
     <script src="node_modules/es6-shim/es6-shim.min.js"></script>
     <script src="node_modules/systemjs/dist/system-polyfills.js"></script>
-    <script src="node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>   
+    <script src="node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
     <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
     <!-- 2. Configure SystemJS -->
     <script>
-      System.config({
-        packages: {        
-          app: {
-            format: 'register',
-            defaultExtension: 'js'
-          }
+        System.config({
+        defaultJSExtensions: true,
+        map: {
+          "angular2-jwt": "node_modules/angular2-jwt/angular2-jwt",
+          "angular2": "node_modules/angular2",
+          "rxjs": "node_modules/rxjs",
+          '@angular2-material/core': 'node_modules/@angular2-material/core/core',
+          '@angular2-material/checkbox': 'node_modules/@angular2-material/checkbox/checkbox',
+          '@angular2-material/button': 'node_modules/@angular2-material/button/button',
+          '@angular2-material/progress-circle': 'node_modules/@angular2-material/progress-circle/progress-circle'
         }
       });
       System.import('app/main')
             .then(null, console.error.bind(console));
     </script>
-  </head>
-  <!-- 3. Display the application -->
-  <body>
+</head>
+<!-- 3. Display the application -->
+
+<body>
     <my-app>Loading...</my-app>
-  </body>
+</body>
+
 </html>
