all material components added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
           '@angular2-material/core': 'node_modules/@angular2-material/core/core',
           '@angular2-material/checkbox': 'node_modules/@angular2-material/checkbox/checkbox',
           '@angular2-material/button': 'node_modules/@angular2-material/button/button',
-          '@angular2-material/progress-circle': 'node_modules/@angular2-material/progress-circle/progress-circle'
+          '@angular2-material/card': 'node_modules/@angular2-material/card/card',
+          '@angular2-material/radio': 'node_modules/@angular2-material/radio/radio',
+          '@angular2-material/sidenav': 'node_modules/@angular2-material/sidenav/sidenav',
+          '@angular2-material/toolbar': 'node_modules/@angular2-material/toolbar/toolbar',      
+          '@angular2-material/progress-circle': 'node_modules/@angular2-material/progress-circle/progress-circle'      
+                   
         }
       });
       System.import('app/main')
