--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
   </head>
 
   <!-- 3. Display the application -->
-  <body>
-    <my-app>ttest...</my-app>
+  <body style="
+    background: #484b4d;
+">
+    <my-app>Loading...</my-app>
   </body>
 
 </html>
