--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Angular 2 QuickStart</title>
 
+<link rel="stylesheet" href="styles.css"></link>
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
     <script src="node_modules/es6-shim/es6-shim.min.js"></script>
@@ -30,7 +31,7 @@
           "angular2": "node_modules/angular2",
           "rxjs": "node_modules/rxjs",
           "ts": "jspm_packages/github/frankwallis/plugin-typescript@4.0.2/plugin.js",
-           "typescript": "jspm_packages/npm/typescript@1.8.9/lib/typescript.js"                    
+           "typescript": "jspm_packages/npm/typescript@1.8.9/lib/typescript.js",
         }
       });
       System.import('app/boot')
@@ -40,9 +41,7 @@
   </head>
 
   <!-- 3. Display the application -->
-  <body style="
-    background: #484b4d;
-">
+  <body>
     <my-app>Loading...</my-app>
   </body>
 
